# todo_api_app_with_poetry_sir_zia_code

todo_app/: .gitignore  Dockerfile.dev  README.md  env_backup  pyproject.toml
todo_app/tests/: test_main.py
todo_app/todo_app/: main.py  models.py  python_console_client.py
